@@ -1,3 +1,6 @@
+2010-06-02:
+	* (seebs) add PSEUDO_NOSYMLINKEXP feature and documentation.
+
 2010-04-30:
 	* (seebs) rework pdb_history
 	* (seebs) small cleanups and bulletproofing.
